Change endpoint to validateAccessToken
