# src/routes/authRouter.js
@@ -4,7 +4,6 @@ const bodyValidator = require('../middlewares/bodyValidatorMiddleware')();
 const errorHandler = require('../middlewares/errorHandlerMiddleware')();
 
 const FirebaseAuth = require('../gateways/firebase-auth');
-
 const authService = require('../services/authService');
 const firebaseGateway = require('../gateways/firebaseGateway')(FirebaseAuth());
 const authController = require('../controllers/authController')(authService(firebaseGateway));
@@ -15,7 +14,7 @@ module.exports = function authRouter() {
     express.Router()
       .post('/signUp', bodyValidator.authValidations, bodyValidator.validate, authController.signUp)
       .post('/signIn', bodyValidator.authValidations, bodyValidator.validate, authController.signIn)
-      .post('/validateToken', bodyValidator.validateTokenValidations, bodyValidator.validate, authController.validateToken)
+      .post('/validateAccessToken', bodyValidator.validateTokenValidations, bodyValidator.validate, authController.validateAccessToken)
       .post('/refreshToken', bodyValidator.refreshTokenValidations, bodyValidator.validate, authController.refreshToken)
       .post('/deleteUser', bodyValidator.deleteUserValidations, bodyValidator.validate, authController.deleteUser)
       .use(errorHandler.handle)
